data/cloudformation_collected_templates_new/template_05442_cf-example-4.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy a VPC with 2 AZ, IGW, WebServers, and ALB
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: VPC Configuration Parameters
        Parameters:
          - pmVpcId
          - pmVpcRegion
          - pmAz1
          - pmAz2
          - pmVpcCidr
          - pmPubSubnetCidr1
          - pmPubSubnetCidr2
          - pmPriSubnetCidr1
          - pmPriSubnetCidr2
      - Label:
          default: EC2 Configuration Parameters
        Parameters:
          - pmEc2ImageId
          - pmEc2InstanceType
          - pmEc2VolumeSize
          - pmAccessKeyId
    ParameterLabels:
      pmVpcId:
        default: Enter VPC id
      pmVpcCidr:
        default: Enter VPC CIDR
      pmVpcRegion:
        default: Enter VPC region
      pmAz1:
        default: Enter VPC AZ1
      pmAz2:
        default: Enter VPC AZ2
      pmPubSubnetCidr1:
        default: Enter VPC public subnet1
      pmPubSubnetCidr2:
        default: Enter VPC public subnet2
      pmPriSubnetCidr1:
        default: Enter VPC private subnet1
      pmPriSubnetCidr2:
        default: Enter VPC private subnet2
      pmEc2ImageId:
        default: Enter EC2 image id
      pmEc2InstanceType:
        default: Enter EC2 instance type
      pmEc2VolumeSize:
        default: Enter EC2 volume size
      pmAccessKeyId:
        default: Enter EC2 SSH access key
Parameters:
  pmVpcId:
    Type: String
    Default: POC
  pmVpcRegion:
    Type: String
    Default: us-east-1
  pmVpcCidr:
    Type: String
    Default: 10.0.0.0/16
  pmPubSubnetCidr1:
    Type: String
    Default: 10.0.10.0/24
  pmPubSubnetCidr2:
    Type: String
    Default: 10.0.20.0/24
  pmPriSubnetCidr1:
    Type: String
    Default: 10.0.50.0/24
  pmPriSubnetCidr2:
    Type: String
    Default: 10.0.60.0/24
  pmAz1:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a
  pmAz2:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1b
  pmEc2ImageId:
    Type: String
    Default: ami-28456852
    AllowedValues:
      - ami-28456852
      - ami-eca289fb
      - ami-446f3521
    ConstraintDescription: Must be a valid EC2 image id
  pmEc2InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: Must be a valid EC2 instance type
  pmEc2VolumeSize:
    Type: Number
    Default: '10'
    MinValue: '5'
    MaxValue: '1024'
    ConstraintDescription: Must be between 5 and 1024 Gb
  pmAccessKeyId:
    Type: AWS::EC2::KeyPair::KeyName
    Default: aws_cory1
Mappings: {}
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'pmVpcCidr'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Ref 'pmVpcId'
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmVpcId'
              - IGW
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'IGW'
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnetCidr1'
      AvailabilityZone: !Ref 'pmAz1'
      Tags:
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPubSubnetCidr1'
              - !Ref 'pmAz1'
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPriSubnetCidr1'
      AvailabilityZone: !Ref 'pmAz1'
      Tags:
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPriSubnetCidr1'
              - !Ref 'pmAz1'
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnetCidr2'
      AvailabilityZone: !Ref 'pmAz2'
      Tags:
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPubSubnetCidr2'
              - !Ref 'pmAz2'
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPriSubnetCidr2'
      AvailabilityZone: !Ref 'pmAz2'
      Tags:
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPriSubnetCidr2'
              - !Ref 'pmAz2'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Public Route Table
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttach
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'IGW'
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet1'
      RouteTableId: !Ref 'PublicRouteTable'
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet2'
      RouteTableId: !Ref 'PublicRouteTable'
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private Route Table
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet1'
      RouteTableId: !Ref 'PrivateRouteTable'
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet2'
      RouteTableId: !Ref 'PrivateRouteTable'
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'VPC'
      GroupName: WEB-SG
      GroupDescription: Enable SSH, HTTP, and HTTPS access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: WEB-SG
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref 'EC2InstanceRole'
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: POC-ACCESS
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: ''
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AWSLambdaFullAccess
        - arn:aws:iam::aws:policy/AmazonSSMFullAccess
        - arn:aws:iam::aws:policy/IAMReadOnlyAccess
  EC2Instance1:
    Type: AWS::EC2::Instance
    DependsOn: IGWAttach
    Properties:
      InstanceType: !Ref 'pmEc2InstanceType'
      ImageId: !Ref 'pmEc2ImageId'
      KeyName: !Ref 'pmAccessKeyId'
      NetworkInterfaces:
        - GroupSet:
            - !Ref 'SecurityGroup'
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref 'PublicSubnet1'
      IamInstanceProfile: !Ref 'EC2InstanceProfile'
      UserData: !Base64
        Fn::Join:
          - ''
          - - "#!/bin/bash -v\n"
            - "yum update -y\n"
            - "yum install -y aws-cli nginx unzip tree git\n"
            - "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n"
            - "start amazon-ssm-agent\n"
            - "service nginx start\n"
            - "cp /usr/share/nginx/html/index.html /usr/share/nginx/html/nginx.html\n"
            - "chkconfig nginx on\n"
      Tags:
        - Key: Name
          Value: WEB-1
  EC2Instance2:
    Type: AWS::EC2::Instance
    DependsOn: IGWAttach
    Properties:
      InstanceType: !Ref 'pmEc2InstanceType'
      ImageId: !Ref 'pmEc2ImageId'
      KeyName: !Ref 'pmAccessKeyId'
      NetworkInterfaces:
        - GroupSet:
            - !Ref 'SecurityGroup'
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref 'PublicSubnet2'
      IamInstanceProfile: !Ref 'EC2InstanceProfile'
      UserData: !Base64
        Fn::Join:
          - ''
          - - "#!/bin/bash -v\n"
            - "yum update -y\n"
            - "yum install -y aws-cli httpd24 php56\n"
            - "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n"
            - "start amazon-ssm-agent\n"
            - "cp /var/www/noindex/index.html /var/www/html\n"
            - "cp /var/www/noindex/index.html /var/www/html/apache.html\n"
            - "service httpd start\n"
            - "chkconfig httpd on\n"
      Tags:
        - Key: Name
          Value: WEB-2
  ALBTargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      HealthCheckPath: /index.html
      HealthCheckPort: 80
      Name: Nginx
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref 'VPC'
      Targets:
        - Id: !Ref 'EC2Instance1'
          Port: 80
  ALBTargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      HealthCheckPath: /index.html
      HealthCheckPort: 80
      Name: Apache
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref 'VPC'
      Targets:
        - Id: !Ref 'EC2Instance2'
          Port: 80
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: POC-ALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref 'SecurityGroup'
      Subnets:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'
      Tags:
        - Key: Name
          Value: POC-ALB
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref 'ALBTargetGroup1'
      LoadBalancerArn: !Ref 'ApplicationLoadBalancer'
      Port: '80'
      Protocol: HTTP
  ALBListenerRule1:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref 'ALBTargetGroup1'
      Conditions:
        - Field: path-pattern
          Values:
            - /nginx.html
      ListenerArn: !Ref 'ALBListener'
      Priority: 1
  ALBListenerRule2:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref 'ALBTargetGroup2'
      Conditions:
        - Field: path-pattern
          Values:
            - /apache.html
      ListenerArn: !Ref 'ALBListener'
      Priority: 2
Outputs:
  VPC:
    Value: !Ref 'VPC'
  IGW:
    Value: !Ref 'IGW'
  EC2Instance1:
    Value: !Ref 'EC2Instance1'
  EC2Instance2:
    Value: !Ref 'EC2Instance2'
  URL:
    Value: !Join
      - ''
      - - http://
        - !GetAtt 'ApplicationLoadBalancer.DNSName'
